# bionemo-examples

./: .gitignore  Dockerfile  README.md  launch.sh  serr
examples/blueprints/: README.md
examples/framework/: .gitignore
examples/nabs/: README.md
examples/nabs/generative-virtual-screening/: generative-virtual-screening.ipynb
examples/nims/: README.md
examples/nims/alphafold2/: AlphaFold2-NIM-example.ipynb
examples/nims/boltz-2/: .gitignore  AFFINITY_PREDICTION_GUIDE.md  ASYNC_GUIDE.md  COVALENT_COMPLEX_GUIDE.md  INSTALLATION.md  INSTALL_TESTPYPI.md  LICENSE  MANIFEST.in  PARAMETERS.md  README.md  VIRTUAL_SCREENING_GUIDE.md  YAML_GUIDE.md  pyproject.toml
examples/nims/boltz-2/boltz2_client/: __init__.py  cli.py  client.py  exceptions.py  models.py  models_affinity.py  utils.py  virtual_screening.py
examples/nims/boltz-2/examples/: 01_basic_protein_folding.py  02_protein_structure_prediction_with_msa.py  03_protein_ligand_complex.py  04_covalent_bonding.py  05_dna_protein_complex.py  06_yaml_configurations.py  07_advanced_parameters.py  08_affinity_prediction_simple.py  09_virtual_screening.py  README.md  boltz2_demo.ipynb  boltz2_nim_DNA_Protein_Complex_example_py3Dmol.ipynb  boltz2_nim_protein_ligand_covalent_complex_molstar_visualization.ipynb  msa-kras-g12c_combined.a3m  multi_protein_complex.yaml  protein_ligand.yaml  sars_cov2_mpro_nirmatrelvir.yaml
examples/nims/boltz-2/licenses/: PyYAML-LICENSE  README.md  aiofiles-LICENSE  click-LICENSE  httpx-LICENSE  py3Dmol-LICENSE  pydantic-LICENSE  rich-LICENSE  typing-extensions-LICENSE
examples/nims/boltz-2/tests/: __init__.py  test_basic.py  test_examples_syntax.py
examples/nims/diffdock/: DiffDock_NIM_Docking.ipynb
examples/nims/diffdock/ligand_input_files/: compound_1.sdf  compound_2.sdf  compound_3.sdf  compound_4.sdf
examples/nims/genmol/: 1.basics.ipynb  2.linker-design.ipynb  3.hit-generation.ipynb  README.md  fda_drugs.csv  genmol.py  library.py  optimizer.py  oracle.py  requirements.txt  utils.py
examples/nims/molmim/: MolMIMOracleControlledGeneration.ipynb
examples/nims/molmim/molmim-client/: LICENSE.txt  README.md  cma_custom_oracles.ipynb  requirements.txt
examples/nims/molmim/molmim-client/guided_molecule_gen/: inference_client.py  optimizer.py
examples/nims/molmim/molmim-client/guided_molecule_gen/oracles/: __init__.py  oracles.py
examples/nims/molmim/molmim-opt-api/: Dockerfile  README.md  docker-compose.yml  inference_client.py  main.py  molmim-opt-api-runner.ipynb  requirements.txt
examples/service/: Dockerfile  README.md  launch.sh  protein-generation-pipeline.ipynb  task-fitting-predictor.ipynb
examples/service/data/: AID_56812_datatable_all.csv
examples/service/notebooks/: cma_custom_oracles.ipynb  protein-generation-and-filtering.ipynb  protein-generation-pipeline.ipynb  task-fitting-predictor.ipynb  virtual-screening-pipeline.ipynb
examples/service/notebooks/data/: pgp-requirements.txt
